fixed math overflow mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -408,5 +408,7 @@ ul.top-navigation li.prev-page a{
   border-right: 0.05pt solid #283A4B;
 }
 */
-
+mjx-container[jax="CHTML"][display="true"]{
+  overflow: auto
+}
 }
